src/objects/pse__Proj__c.object
<CustomObject>
    <customHelpPage>pse__ProjectHelp</customHelpPage>
    <description>Represents a collection of business transactions, activities, and related items to be managed over a defined time range, such as timecards, expenses, milestones, and budgets. Typically, people (represented by Resource records) are assigned to projects, though some projects do not require assignments in order to be staffed. Projects may also have a master project (parent) or a sub project (child) in the project hierarchy, supporting roll-ups of revenues, costs, and time to every project and up through the hierarchy.</description>
    <fields>
        <fullName>Budget_Complete__c</fullName>
        <formula>IF( pse__Bookings__c&gt;0, pse__Billings__c/ pse__Bookings__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget % Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Complete_Revenue__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chxl=0:|0%||100%&amp;chxt=y&amp;chs=200x110&amp;cht=gom&amp;chd=t:&quot;+TEXT(Budget_Complete__c * 100) + &quot;&amp;chls=3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3&amp;chl=&quot;+TEXT(ROUND(Budget_Complete__c* 100,0)) +&quot;%&amp;chma=0,0,5&quot;,&quot;No Image Available&quot; ,110,200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete - Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Value_SEK__c</fullName>
        <description>Value to store SEK amounts for finance</description>
        <label>Contract Value (SEK)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Primary_Contact__c</fullName>
        <description>To enter a customer contact i.e Customer Project Manager</description>
        <label>Customer Primary Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expiry Project date according with the SOW terms</description>
        <inlineHelpText>Expiry Date as per SOW</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field describes if it is free of charge project</description>
        <inlineHelpText>Free Of Charge</inlineHelpText>
        <label>FOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Delivered__c</fullName>
        <description>Billable Hours Delivered</description>
        <formula>pse__Billable_Internal_Hours__c  +  pse__Billable_External_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Billable Hours= Internal Billable Hours + External Billable Hours</inlineHelpText>
        <label>Hours Delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Remaining__c</fullName>
        <description>Hours remaining on Project taking legacy system hours into account</description>
        <formula>(Previously_Billed_Hours__c + pse__Planned_Hours__c) - ((pse__Billable_Internal_Hours__c + pse__Billable_External_Hours__c ) + Previously_Billed_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Previously Billed Hours + Planned Hours) - (Total Billable Hours + Previously Billed Hours)</inlineHelpText>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarginPercent__c</fullName>
        <formula>IF(pse__Billings__c = 0, 0, (( pse__Billings__c - pse__Total_Costs__c )/pse__Billings__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MonthlyFlowSchedule__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>Backend field used as a workaround to run scheduled flows on a monthly basis, which isn&apos;t an option as of January 2022. The box is checked if the present day is the first day of the month. It&apos;s used in the conditions of the scheduled flow. JIRA: SFDCSPT-723</description>
        <formula>DAY(TODAY()) = 1</formula>
        <inlineHelpText>Backend field used as a workaround to run scheduled flows on a monthly basis, which isn&apos;t an option as of January 2022. The box is checked if the present day is the first day of the month. It&apos;s used in the conditions of the scheduled flow.</inlineHelpText>
        <label>Monthly Flow Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Community_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if this customer is managed through PSA Community</description>
        <inlineHelpText>This field identifies if this customer is managed through PSA Community</inlineHelpText>
        <label>PSA Community Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_Gauge__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chxl=0:|0%||100%&amp;chxt=y&amp;chs=200x110&amp;cht=gom&amp;chd=t:&quot;+TEXT(Percent_Complete_Hours__c * 100) + &quot;&amp;chls=3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3&amp;chl=&quot;+TEXT(ROUND(Percent_Complete_Hours__c * 100,0)) +&quot;%&amp;chma=0,0,5&quot;,&quot;No Image Available&quot; ,110,200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete - Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_Hours__c</fullName>
        <formula>IF
  (Previously_Billed_Hours__c + pse__Planned_Hours__c = 0,
   null,
   (( pse__Billable_Internal_Hours__c + pse__Billable_External_Hours__c ) + Previously_Billed_Hours__c) / (Previously_Billed_Hours__c + pse__Planned_Hours__c)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previously_Billed_Hours__c</fullName>
        <description>Hours billed in legacy project tracking - prior to PSA go-live</description>
        <inlineHelpText>Hours billed in legacy project tracking - prior to PSA go-live</inlineHelpText>
        <label>Previously Billed Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectHoursUsedAlertSent__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Backend checkbox used by the &apos;FF PROJECT: ! 4 PS Customer Project Hours Used Email Alert&apos; flow that sends an email alert to a customer when the sends an email alert to the customer contacts when the value in the &apos;Percent Complete (Hours)&apos; field passes a certain percentage threshold and the project record meets certain criteria. The purpose of the checkbox is to ensure the email is sent only once and subsequent percentage increases don&apos;t trigger the flow. JIRA: SFDCSPT-721</description>
        <inlineHelpText>Hidden checkbox used by the &apos;FF PROJECT: ! 4 PS Customer Project Hours Used Email Alert&apos; flow that sends an email alert to a customer when the sends an email alert to the customer contacts when the value in the &apos;Percent Complete (Hours)&apos; field passes a certain percentage threshold and the project record meets certain criteria. The purpose of the checkbox is to ensure the email is sent only once and subsequent percentage increases don&apos;t trigger the flow.</inlineHelpText>
        <label>Project Hours Used Alert Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_AssignmentsSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Assignments Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_BudgetsSegment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PSR Budgets Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_CurrentWeek_End_Date__c</fullName>
        <formula>CASE( MOD(TODAY() - DATE(1900, 1, 7), 7),
1, Today()-1,
2, Today()-2,
3, Today()-3,
4, Today()-4,
5, Today()-5,
6, Today()-6,
0, Today()-7,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSR Current Week Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_ExpensesSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Expenses Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_FinancialsStatus__c</fullName>
        <inlineHelpText>Please enter the financial status of the project for this week&apos;s ending date for inclusion in the weekly status report.</inlineHelpText>
        <label>PSR Financials Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_IssuesSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Issues Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_LastWeek_Ending_Date__c</fullName>
        <formula>CASE( MOD(TODAY() - DATE(1900, 1, 7), 7),
1, Today()-8,
2, Today()-9,
3, Today()-10,
4, Today()-11,
5, Today()-12,
6, Today()-13,
0, Today()-14,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSR Last Week Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_MilestoneSegment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PSR Milestone Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_NextWeek_Ending_Date__c</fullName>
        <formula>CASE( MOD(TODAY() - DATE(1900, 1, 7), 7),
1, Today()+6,
2, Today()+5,
3, Today()+4,
4, Today()+3,
5, Today()+2,
6, Today()+1,
0, Today(),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSR Next Week Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_OverallProjectStatus__c</fullName>
        <label>PSR Overall Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_ProjectFundRemaining__c</fullName>
        <formula>pse__Bookings__c - pse__Billings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSR Project Funds Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_Project_Status_Notes__c</fullName>
        <label>PSR Project Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_RemainingBillableHrs__c</fullName>
        <formula>pse__Planned_Hours__c - (pse__Billable_External_Hours__c + pse__Billable_Internal_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSR Remaining Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_RiskSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Risks Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_ScheduleStatus__c</fullName>
        <inlineHelpText>Please enter the schedule status for the week ending date for inclusion in the weekly status report.</inlineHelpText>
        <label>PSR Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_Scope_Status__c</fullName>
        <description>Please enter the scope status for the week ending date for inclusion in the weekly status report.</description>
        <inlineHelpText>Please enter the scope status for the week ending date for inclusion in the weekly status report.</inlineHelpText>
        <label>PSR Scope Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_StatusSegment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Tick if the Project Status Report should include the Project Status Segment</description>
        <label>PSR Status Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_TasksSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Tasks Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_TimeBillSegment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PSR Timecard Billable Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_TimeNonBillSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Timecard Non Billable Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_TimecardsAllSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Timecards ALL Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_Week_Ending_Date__c</fullName>
        <label>PSR Week Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStatusReport_Week_Starting_Date__c</fullName>
        <label>PSR Week Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Expires_in_60_Days__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>Backend field used in &apos;FF PROJECT : ! 5 PS Customer Project Expires Soon Email Alert&apos; Flow that sends an email to alert the designated PS contacts associated with the opportunity on the project record that the project closes in 60 days and, as per OF/SOW, the remaining PS hours/days and could no longer be used. JIRA: SFDCSPT-722</description>
        <formula>TODAY() + 60 =  Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Backend field used in automation that sends an email to alert the designated PS contacts associated with the opportunity on the project record that the project closes in 60 days and, as per OF/SOW, the remaining PS hours/days and could no longer be used.</inlineHelpText>
        <label>Project Expires in 60 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Hours__c</fullName>
        <description>Total hours on SOW</description>
        <inlineHelpText>Total hours on SOW</inlineHelpText>
        <label>SOW Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Report_Week_Ending__c</fullName>
        <label>Status Report Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <businessOwnerGroup>Professional_Services</businessOwnerGroup>
        <description>Color code to visually indicate the status of the project. The colors are mapped to the values in the &apos;Project Status&apos; picklist field.</description>
        <formula>IF(ISPICKVAL($UserRole.PortalType,&quot;None&quot;), (IF(ISPICKVAL(pse__Project_Status__c,&quot;Yellow&quot;) ,
IMAGE(&quot;/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),


IF(ISPICKVAL(pse__Project_Status__c,&quot;Red&quot;),
IMAGE(&quot;/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),

IMAGE(&quot;/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;)

))),(IF(ISPICKVAL(pse__Project_Status__c,&quot;Yellow&quot;) ,
IMAGE(&quot;/Neo4jCustomerServicePortal/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),

IF(ISPICKVAL(pse__Project_Status__c,&quot;Red&quot;),
IMAGE(&quot;/Neo4jCustomerServicePortal/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),

IMAGE(&quot;/Neo4jCustomerServicePortal/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;)

))))</formula>
        <inlineHelpText>Color code to visually indicate the status of the project. The colors are mapped to the values in the &apos;Project Status&apos; picklist field.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psaws__Actual_Hours__c</fullName>
        <formula>pse__Billable_Internal_Hours__c +  pse__Billable_External_Hours__c +  pse__Non_Billable_Internal_Hours__c +  pse__Non_Billable_External_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>psaws__Close_to_Budget__c</fullName>
        <formula>!ISNULL(pse__Bookings__c) &amp;&amp; pse__Bookings__c &gt; 0 &amp;&amp; (pse__Billings__c &gt;= 0.85 *  pse__Bookings__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Close to Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>psaws__High_Actual_Hours__c</fullName>
        <formula>!ISBLANK(pse__Planned_Hours__c) &amp;&amp; (psaws__Actual_Hours__c &gt;= (0.8 * pse__Planned_Hours__c))</formula>
        <label>High Actual Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>psaws__Project_Manager_Is_Current_User__c</fullName>
        <formula>pse__Project_Manager__r.pse__Salesforce_User__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager Is Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Action_Count_Billing_Eligible_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Saving the Project with this checkbox checked updates the fields that track Billing Eligible Business Records (TC Splits, Expenses, Milestones, Misc Adjustments, Budgets) for this Project and also auto-unchecks this Action checkbox.</description>
        <inlineHelpText>Saving the Project with this checkbox checked updates the fields that track Billing Eligible Business Records (TC Splits, Expenses, Milestones, Misc Adjustments, Budgets) for this Project and also auto-unchecks this Action checkbox.</inlineHelpText>
        <label>Action: Count Billing Eligible Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Update_Current_Time_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Update Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Recalc_Date__c</fullName>
        <label>Actuals: Last Recalc Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Update_Date__c</fullName>
        <label>Actuals: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actuals: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Need_Recalc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actuals: Need Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Add_BEIs_To_Existing_Batches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</description>
        <inlineHelpText>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</inlineHelpText>
        <label>Add BEIs To Existing Batches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Alert_Threshold__c</fullName>
        <description>Triggers an email when Percentage Used equals or exceeds the percentage value entered. Apply Billing Cap must be selected and there must also be a contact in the Alert Recipient field.</description>
        <inlineHelpText>Enter the threshold percentage that will trigger an email when the value in the Percentage Used field equals or exceeds this value. You must also select Apply Billing Cap and select a contact from the Alert Recipient field.</inlineHelpText>
        <label>Alert Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Expenses_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then Expense Reports (and Expenses) may be logged for this project without the Resource on the Expense Report needing to have an open and current Assignment for the Project.</description>
        <inlineHelpText>If this field is checked, then Expense Reports (and Expenses) may be logged for this project without the Resource on the Expense Report needing to have an open and current Assignment for the Project.</inlineHelpText>
        <label>Allow Expenses Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Self_Staffing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether a resource may create an assignment to this project for his/her own resource. Checking this will allow any and all resources in the system to create assignments to this project.</inlineHelpText>
        <label>Allow Self-Staffing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Timecards_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then Timecards may be logged for this project without the Resource on the Timecard needing to have an open and current Assignment for the Project.  Such projects are typically called &quot;Global&quot; projects - e.g. Vacation, Sick Leave, Maternity/Paternity Leave.</description>
        <inlineHelpText>If this field is checked, then Timecards may be logged for this project without the Resource on the Timecard needing to have an open and current Assignment for the Project.</inlineHelpText>
        <label>Allow Timecards Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Apply_Billing_Cap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger an email when the project billings total is over a threshold percentage of its bookings total. There must be a contact in the Alert Recipient field and there must also be a value in the Alert Threshold field.</description>
        <inlineHelpText>Select to enable email alerts when project billings and pre-billed total equals or exceeds a percentage of its bookings total, represented by the Alert Threshold. You must select a contact from the Alert Recipient field and enter Alert Threshold value</inlineHelpText>
        <label>Apply Billing Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Apply_Spend_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger an email when the project billings total is over a threshold percentage of its bookings total. There must be an email address in the Alert Recipient field and there must also be a value in the Alert Threshold field.</description>
        <inlineHelpText>Select to enable email alerts when project billings total equals or exceeds percentage of its bookings total, represented by the value in Alert Threshold. You must specify an email address in Alert Recipient and enter a value in Alert Threshold.</inlineHelpText>
        <label>Apply Spend Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Last_Update_Date__c</fullName>
        <label>Backlog: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backlog: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_End_Date__c</fullName>
        <description>End date recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End date recorded on the project baseline.</inlineHelpText>
        <label>Baseline End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_Project_Phase__c</fullName>
        <description>Project phase recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__Project_Phase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project phase recorded on the project baseline.</inlineHelpText>
        <label>Baseline Project Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_Project_Status__c</fullName>
        <description>Project status recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__Project_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project status recorded on the project baseline.</inlineHelpText>
        <label>Baseline Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_Stage__c</fullName>
        <description>Stage recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stage recorded on the project baseline.</inlineHelpText>
        <label>Baseline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Baseline_Start_Date__c</fullName>
        <description>Start date recorded on the project baseline.</description>
        <formula>pse__Baseline__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Start date recorded on the project baseline.</inlineHelpText>
        <label>Baseline Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Baseline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Baseline version of this project.</description>
        <inlineHelpText>Baseline version of this project.</inlineHelpText>
        <label>Baseline</label>
        <referenceTo>pse__VersionItem_ProjectDetail__c</referenceTo>
        <relationshipLabel>Baseline</relationshipLabel>
        <relationshipName>Baseline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence_Number__c</fullName>
        <formula>VALUE(pse__Batch_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence__c</fullName>
        <description>Used for reliable sorting of projects so a large collection of projects can be split into batches.</description>
        <displayFormat>{0}</displayFormat>
        <label>Batch Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expense_Fee_Flat__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Flat fee in Project currency by which to increase the billable amount of any Expense logged for the Project.  The calculation will apply any percentage expense fee*before* this flat expense fee amount.</description>
        <inlineHelpText>Flat fee in Project currency by which to increase the billable amount of any Expense logged for the Project.  The calculation will apply any percentage expense fee*before* this flat expense fee amount.</inlineHelpText>
        <label>Billable Expense Fee Flat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expense_Fee_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fee percentage by which to increase the billable amount of any Expense logged for the Project.  0% means no increase (default), whereas 100% means double.  The calculation will apply the percentage expense fee*before* any flat expense fee.</description>
        <inlineHelpText>Fee percentage by which to increase the billable amount of any Expense logged for the Project.  0% means no increase (default), whereas 100% means double.  The calculation will apply the percentage expense fee*before* any flat expense fee.</inlineHelpText>
        <label>Billable Expense Fee Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Budgets__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Budgets that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Budgets that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Budgets</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Expenses that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Expenses that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Expenses</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>